@@ -1,3 +1,8 @@
+Wed Jul  1 08:46:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* marshal.c (w_encoding): encodings need extra depth.
+	  [ruby-core:24100]
+
 Wed Jul  1 06:47:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* enum.c (enum_grep): gets rid of type-punning calls.
